syntax = "proto2";

package protobuf;

option java_package = "protobuf.proto";
option java_generic_services = true;
option optimize_for = SPEED;

message EchoRequest {
  required string message = 1;
}

message EchoResponse {
  required string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns(EchoResponse);
}